fix spacing

--- a/src/components/page/Page.module.css
+++ b/src/components/page/Page.module.css
@@ -1,5 +1,4 @@
 .content {
     background-color: var(--backgroundLight);
     color: var(--backgroundDark);
-    padding: 0.5rem;
 }
