--- a/src/routes/market/Market.module.css
+++ b/src/routes/market/Market.module.css
@@ -1,5 +1,4 @@
 .productsContainer {
-  padding: 1rem 0rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
